style.css
body {
    background-color: rgb(34, 34, 34);
    overflow-x: hidden;
}

* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}

::-webkit-scrollbar {
    width: 0.5rem;
    background: rgba(50, 50, 50, 0);
}

::-webkit-scrollbar-thumb {
    background: rgb(220, 220, 220);
    border-radius: 2rem;
}

::-webkit-scrollbar-thumb:hover {
    background-color: rgb(165, 165, 165);
}

::-webkit-scrollbar-thumb:active {
    background-color: rgb(110, 110, 110);
}

.menu {
    padding-right: 0.5rem;
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
}

.menu li {
    list-style-type: none;
    padding: 1rem;
    margin: 0.5rem;
}

.menu a {
    color: rgb(235, 235, 235);
    font-size: 1rem;
}

.menu li:hover {
    background-color: rgb(114, 114, 114);
}

.title {
    color: white;
    font-size: 3rem;
    text-align: center;
}

.download {
    color: rgb(184, 184, 184);
    text-align: center;
    width: 25rem;
    margin: auto;
    font-size: 1.5rem;
    border: 0.2rem solid rgb(122, 122, 122);
    border-radius: 0.5rem;
}

.social-media-list {
    font-size: 7rem;
    text-align: center;
    width: 100%;
    margin: 0 auto;
    padding: 0;
}

.social-media-list li a {
    color: rgb(137, 211, 230);
}

.social-media-list li {
    display: inline-block;
    height: 7rem;
    width: 7rem;
    margin: 10px 3px;
    border-radius: 0.5rem;
    color: #fff;
    background-color: rgb(51, 51, 51);
    cursor: pointer;
    transition: all .2s ease-in-out;
}

.social-media-list li:hover {
    background-color: rgb(68, 90, 95);
}

.para {
    color: rgb(255, 255, 255);
    text-align: center;
    margin: 1rem auto;
    font-size: 1.5rem;
    max-width: 80%;
    width: auto;
    padding: 0 1rem;
    opacity: 0; 
    animation: fadeIn 0.5s forwards; 
}

.images {
    display: block;
    margin: 1rem auto;
    filter: drop-shadow(6px 6px 10px);
    border-radius: 1.5rem;
    max-width: 100%;
    height: auto;
    transition: transform 0.3s ease; 
    opacity: 0; 
    animation: fadeIn 0.5s forwards; 
}

.images:hover {
    transform: scale(1.1); 
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

hr.rounded {
    border-top: 8px solid rgb(131, 131, 131);
    margin: 2rem auto;
    width: 80%;
    border-radius: 5rem;
}

a {
    color: rgb(0, 183, 207);
    text-decoration: none;
}


#menu-toggle {
    display: none;
}

.menu-icon {
    display: none;
    font-size: 2rem;
    cursor: pointer;
    color: rgb(235, 235, 235);
    padding: 1rem;
}

@media (max-width: 1500px) {
    .title {
        font-size: 2.5rem;
    }
    .download {
        font-size: 1.2rem;
    }
    .para {
        font-size: 1.2rem;
    }
    .images {
        width: 90%; 
    }
}

@media (max-width: 768px) {
    .menu {
        display: none;
        flex-direction: column;
        align-items: center;
        width: 100%;
    }
    .menu li {
        width: 100%;
        text-align: center;
    }
    #menu-toggle:checked + .menu-icon + .menu {
        display: flex;
    }
    .menu-icon {
        display: block;
    }
}

